--- a/kadai_014.html/style.css
+++ b/kadai_014.html/style.css
@@ -5,13 +5,13 @@ body {
   .google-fonts {font-family: "Josefin Sans", sans-serif;
   }
 
-  .first_decoration {
-    font-size: 20px;
- }
+  html {
+  font-size: 20px;
+  }
 
  h1 {
-    font-size: 2em;
-    letter-spacing: 1.2em;
+    font-size: 2rem;
+    letter-spacing: 1.2rem;
     text-shadow: 1px 1px 2px gray;
     border-bottom:solid 3px rgb(115, 115, 114);
 }
